--- a/app/public/home.html
+++ b/app/public/home.html
@@ -2,8 +2,12 @@
 <html>
 <head>
 	<title>Friend Finder</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-	<script   src="https://code.jquery.com/jquery-3.0.0.js"   integrity="sha256-jrPLZ+8vDxt2FnE1zvZXCkCcebI/C8Dt5xyaQBjxQIo="   crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Codystar|Monofett|Monoton|Montserrat|Fredoka+One|Pacifico|Shrikhand"
+rel="stylesheet">
+  <script   src="https://code.jquery.com/jquery-3.0.0.js"   integrity="sha256-jrPLZ+8vDxt2FnE1zvZXCkCcebI/C8Dt5xyaQBjxQIo="   crossorigin="anonymous"></script>
+  
+ 
 	
 </head>
 
@@ -23,4 +27,18 @@
 	</footer>
 
 </body>
+<style>
+    h1 {
+      font-family: 'Shrikhand', cursive;
+    
+    }
+
+    p {
+      font-family: 'Montserrat', cursive;
+    }
+  
+  
+  </style>
+
+
 </html>
