--- a/app/public/home.html
+++ b/app/public/home.html
@@ -1,44 +1,43 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Friend Finder</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <title>Friend Finder</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
+    crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Codystar|Monofett|Monoton|Montserrat|Fredoka+One|Pacifico|Shrikhand"
-rel="stylesheet">
-  <script   src="https://code.jquery.com/jquery-3.0.0.js"   integrity="sha256-jrPLZ+8vDxt2FnE1zvZXCkCcebI/C8Dt5xyaQBjxQIo="   crossorigin="anonymous"></script>
-  
- 
-	
+    rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.0.0.js" integrity="sha256-jrPLZ+8vDxt2FnE1zvZXCkCcebI/C8Dt5xyaQBjxQIo=" crossorigin="anonymous"></script>
+
+
+
 </head>
 
 <body>
-	<div id="wrapper">
-		<div id="main-content" class="container">
-			<div class="jumbotron">
-				<h1>Friend Finder</h1>
-				<p>Answer a few questions...</p>
+  <div id="wrapper">
+    <div id="main-content" class="container">
+      <div class="jumbotron">
+        <h1>Friend Finder</h1>
+        <p>Answer a few questions...</p>
         <p>and find your new BFF!</p>
         <br>
-				<a class="btn btn-primary btn-lg" href="/survey.html" role="button">Play Now</a>
-			</div>
-		</div>
-	</div>
-	<footer class="footer">
-	</footer>
+        <a class="btn btn-primary btn-lg" href="/survey.html" role="button">Play Now</a>
+      </div>
+    </div>
+  </div>
+  <footer class="footer">
+  </footer>
 
 </body>
 <style>
-    h1 {
-      font-family: 'Shrikhand', cursive;
-    
-    }
+  h1 {
+    font-family: 'Shrikhand', cursive;
+  }
 
-    p {
-      font-family: 'Montserrat', cursive;
-    }
-  
-  
-  </style>
+  p {
+    font-family: 'Montserrat', cursive;
+  }
+</style>
 
 
 </html>
